# RemoteRadioDisplay

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  patch_lvgl.bat  patch_lvgl.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  antenna_control.cpp  antenna_control.h  cat_parser.c  cat_parser.cpp  cat_parser.h  cat_polling.cpp  cat_polling.h  cat_shared_types.h  cat_state.cpp  cat_state.hpp  gps_client.cpp  gps_client.h  idf_component.yml  lv_conf.h  main.c  main.cpp  memory_monitor.cpp  memory_monitor.h  ntp_client.c  ntp_client.cpp  ntp_client.h  screensaver.cpp  screensaver.h  settings_storage.cpp  settings_storage.h  task_handles.h  uart.c  uart.cpp  uart.h  websocket_client.cpp  websocket_client.h  wifi_init.c  wifi_init.cpp  wifi_init.h
main/gfx/: lcd_config.h  lcd_init.c  lcd_init.cpp  lcd_init.h  lvgl_init.c  lvgl_init.cpp  lvgl_init.h  lvgl_msg_queue.cpp  lvgl_msg_queue.h  touch_init.c  touch_init.cpp  touch_init.h
main/radio/: radio_subject_updater.cpp  radio_subject_updater.h  radio_subjects.cpp  radio_subjects.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.cpp  ui.h  ui_events.c  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.cpp  ui_helpers.h  ui_scale.h
main/ui/components/: ui_comp_hook.c  ui_comp_hook.cpp  ui_power_popup.cpp  ui_power_popup.h
main/ui/fonts/: ui_font_ButtonFont.c  ui_font_ButtonFontBold.c  ui_font_ButtonFontLargeBold.c  ui_font_ButtonFontLargeBold_P4.c  ui_font_ButtonFontSmallMedium.c  ui_font_ButtonFontSmallMedium_P4.c  (+30 more)
(+13 files in other folders)
